.metals/metals.log
2022.02.16 18:27:04 INFO  tracing is disabled for protocol LSP, to enable tracing of incoming and outgoing JSON messages create an empty file at /Users/mganitombalak/github/training/.metals/lsp.trace.json or /Users/mganitombalak/Library/Caches/org.scalameta.metals/lsp.trace.json
2022.02.16 18:27:04 INFO  logging to file /Users/mganitombalak/github/training/.metals/metals.log
2022.02.16 18:27:04 INFO  Started: Metals version 0.11.1 in workspace '/Users/mganitombalak/github/training' for client Visual Studio Code 1.64.2.
2022.02.16 18:27:04 INFO  Parse release: 11.0.12
2022.02.16 18:27:07 INFO  time: initialize in 3.12s
2022.02.16 18:27:08 WARN  Build server is not auto-connectable.
2022.02.16 18:27:08 WARN  no build tool detected in workspace '/Users/mganitombalak/github/training'. The most common cause for this problem is that the editor was opened in the wrong working directory, for example if you use sbt then the workspace directory should contain build.sbt. 
2022.02.16 18:27:08 WARN  no build target for: /Users/mganitombalak/github/training/Scala/Akbank/readfile.scala
2022.02.16 18:27:17 INFO  no build target found for /Users/mganitombalak/github/training/Scala/Akbank/readfile.scala. Using presentation compiler with project's scala-library version: 3.1.0
Feb 16, 2022 6:27:17 PM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 7
Feb 16, 2022 6:27:17 PM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 9
2022.02.16 18:27:19 INFO  time: code lens generation in 10s
2022.02.16 18:27:19 INFO  time: code lens generation in 1.59s
Exception in thread "pool-1-thread-4" java.lang.InterruptedException
	at scala.meta.internal.metals.FutureCancelToken.checkCanceled(FutureCancelToken.scala:29)
	at scala.meta.internal.mtags.MtagsEnrichments$XtensionCancelChecker.isCancelled(MtagsEnrichments.scala:69)
	at scala.meta.internal.metals.FormattingProvider.$anonfun$isCancelled$1(FormattingProvider.scala:74)
	at scala.meta.internal.metals.FormattingProvider.$anonfun$isCancelled$1$adapted(FormattingProvider.scala:74)
	at scala.Option.exists(Option.scala:376)
	at scala.meta.internal.metals.FormattingProvider.isCancelled(FormattingProvider.scala:74)
	at scala.meta.internal.metals.FormattingProvider.$anonfun$handleMissingFile$1(FormattingProvider.scala:214)
	at scala.meta.internal.metals.FormattingProvider.$anonfun$handleMissingFile$1$adapted(FormattingProvider.scala:209)
	at scala.util.Success.$anonfun$map$1(Try.scala:255)
	at scala.util.Success.map(Try.scala:213)
	at scala.concurrent.Future.$anonfun$map$1(Future.scala:292)
	at scala.concurrent.impl.Promise.liftedTree1$1(Promise.scala:33)
	at scala.concurrent.impl.Promise.$anonfun$transform$1(Promise.scala:33)
	at scala.concurrent.impl.CallbackRunnable.run(Promise.scala:64)
	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1128)
	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:628)
	at java.base/java.lang.Thread.run(Thread.java:829)
2022.02.16 18:27:54 ERROR scalafmt: /Users/mganitombalak/github/training/Scala/Akbank/readfile.scala:10: error: [dialect scala213] expected class or object definition def
def maxLength (line1:Int,line2:Int):Int=if(line1>line2) line1 else line2
^
Feb 16, 2022 6:27:58 PM org.eclipse.lsp4j.jsonrpc.services.GenericEndpoint notify
INFO: Unsupported notification method: $/setTrace
2022.02.16 18:28:35 WARN  no build target for: /Users/mganitombalak/github/training/Scala/Future/src/main.scala
